--- a/app/views/parts/show.html.erb
+++ b/app/views/parts/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+<!-- <p>
   <strong>Item:</strong>
-  <%= @part.item.try(:name) %>
-</p>
+  <%#= @part.item.try(:name) %>
+</p> -->
 
 <p>
   <strong>Number:</strong>
