--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Part</h1>
+<h1 >New Part</h1>
 
 <%= render 'form', part: @part %>
 
-<%= link_to 'Back', parts_path %>
+<%#= link_to 'Back', parts_path %>
