Revisi Error Dropdown in PIC Menu

--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -19,6 +19,7 @@
     <tr>
       <th>Number</th>
       <th>Edit</th>
+      <th>Delete</th>
       <!-- <th>Name</th>
       <th>Norms</th>
       <th>Item</th> -->
